Move buttons to groups

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <script type="module" src="/main.mjs"></script>
-    <script async defer src="/bootstrap.min.js"></script>
+    <script async defer src="/bootstrap.bundle.min.js"></script>
   </body>
 </html>
