--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%2016%2016'%3E%3Ctext%20x='0'%20y='14'%3E📻%3C/text%3E%3C/svg%3E" type="image/svg+xml" />
-    <link href="/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="/assets/main.css">
     <title>Sonos Status</title>
   </head>
   <body>
-    <script type="module" src="/main.mjs"></script>
-    <script async defer src="/bootstrap.bundle.min.js"></script>
+    <script type="module" src="/assets/main.mjs"></script>
+    <script async defer src="/assets/bootstrap.bundle.min.js"></script>
   </body>
 </html>
